--- a/services/main/shellnet-main.service
+++ b/services/main/shellnet-main.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=shellnet main service
+Description=netwallet main service
 After=network.target
 
 [Service]
 Type=simple
 Restart=on-failure
-WorkingDirectory=/root/Shellnet/services/main
-ExecStart=/root/Shellnet/services/main/run.sh start
+WorkingDirectory=/root/NetWallet/services/main
+ExecStart=/root/NetWallet/services/main/run.sh start
 
 [Install]
 WantedBy=multi-user.target
